Python and JS Minerva: Make credentialsData a string instead of a dict/object. Python Minerva: Check for uaId only in transport.credentialsData, not in transport.request. Remove makeLayeredFirewall, AntiHijackTransportFirewall, UAToStreamsCorrelator.
We're doing this because we plan to make HelloFrame not use JSON. Instead it will use a simpler serialization format, which will also not serialize/deserialize credentialsData at all.

--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -134,7 +134,8 @@ function makeHelloData(uaId, transportNumber) {
 	// credentialsData is only needed for the transport that initiates
 	// a Stream.
 	if(transportNumber == 0) {
-		helloData[HP.credentialsData] = {'uaId': uaId, 'csrf': window.CSRF_TOKEN};
+		// Both uaId and CSRF_TOKEN are already base64-encoded.
+		helloData[HP.credentialsData] = uaId + '|' + window.CSRF_TOKEN;
 	}
 	helloData[HP.streamingResponse] = Number(mode == 'flash');
 	helloData[HP.maxReceiveBytes] = 9999999;
