--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -181,8 +181,8 @@ function connectWithFlash(bridge) {
 			for(i=0; i < frames.length; i++) {
 				logger.info('Sending: ' + frames[i]);
 			}
-			var out = fs.writeSerializedFrames_(frames);
-			logger.info('writeSerializedFrames_ rvalue: ' + out);
+			var out = fs.writeFrames(frames);
+			logger.info('writeFrames rvalue: ' + out);
 		} catch(e) {
 			logger.severe('error in onconnect', e);
 		}
@@ -211,7 +211,7 @@ function connectWithFlash(bridge) {
 		}
 	}
 
-	fs.connect_(host, port);
+	fs.connect(host, port);
 
 	lastFlashSocket = fs;
 }
