Many changes; summary: StreamStatusFrame, always close secondary HTTP transports, buffer frames if authenticating, client: create transports for SACKing. Details:
newlink.py: Implement `StreamStatusFrame(lastSackSeenByServer)` to make client aware of the last SACK seen by server.

newlink.py: Fix a serious bug: close HTTP transports that are secondary transports (not subscribed to boxes), even if no frames need to be written to them.

newlink.py: (Probably) fix a serious bug: buffer c2s frames if transport is still authenticating.
We still need a unit test to be sure. This accidentally fixed another annoyance:
If writing StreamCreatedFrame, write it before writing SackFrame or any other frame.

client.js: interpret StreamStatusFrame

client.js: create transport when it needs to send a SACK.

client.js: Write some stub code to support streaming transports.

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -65,6 +65,13 @@ logger.setLevel(goog.debug.Logger.Level.ALL);
 
 logger.info('Logger works.');
 
+
+window.onerror = function(msg, url, lineNumber) {
+	logger.severe('window.onerror: message: ' + cw.repr.repr(msg) +
+		'\nURL: ' + url + '\nLine Number: ' + lineNumber)
+};
+
+
 function byId(o) {
 	return document.getElementById(o);
 }
