--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -37,6 +37,9 @@
 </tr>
 </table>
 
+Make sure you see the restricted string alphabet below, as well as "#1 #1 #1 ...":
+<pre> !"#$%&'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\]^_`abcdefghijklmnopqrstuvwxyz{|}~</pre>
+
 <div id="log"></div>
 
 <div id="appswf"></div>
@@ -57,6 +60,7 @@ goog.require('cw.net.FlashSocket');
 goog.require('cw.net.HelloFrame'); // we actually want HelloProperty_
 goog.require('cw.whoami');
 goog.require('cw.string');
+goog.require('cw.repr');
 </script>
 
 <script>
@@ -68,6 +72,11 @@ var logger = goog.debug.Logger.getLogger('logger');
 logger.setLevel(goog.debug.Logger.Level.ALL);
 
 logger.info('Logger works.');
+
+window.onerror = function(msg, url, lineNumber) {
+	logger.severe('window.onerror: message: ' + cw.repr.repr(msg) +
+		'\nURL: ' + url + '\nLine Number: ' + lineNumber)
+};
 
 function getRandom() {
 	return goog.string.getRandomString() + goog.string.getRandomString();
