--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -60,7 +60,7 @@ goog.require('cw.eventual');
 goog.require('cw.whoami');
 goog.require('cw.string');
 goog.require('cw.repr');
-goog.require('cw.net.FlashSocket');
+goog.require('cw.net.FlashSocketTracker');
 goog.require('cw.net.HelloFrame'); // we actually want HelloProperty_
 </script>
 
