--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -49,13 +49,14 @@ Make sure you see the restricted string alphabet below, as well as "#1 #1 #1 ...
 goog.require('cw.autoTitle');
 goog.require('goog.debug.DivConsole');
 goog.require('goog.debug.Logger');
+goog.require('goog.dom');
 goog.require('goog.async.Deferred');
 goog.require('goog.json.Serializer');
 goog.require('goog.net.XhrIo');
 goog.require('goog.net.EventType');
 goog.require('goog.events');
 goog.require('goog.Uri');
-goog.require('swfobject');
+goog.require('goog.ui.media.FlashObject');
 goog.require('cw.eventual');
 goog.require('cw.whoami');
 goog.require('cw.string');
@@ -111,17 +112,21 @@ var mode = getTestMode(url);
 logger.info('Mode is: ' + mode)
 
 
+var flashObject = null;
+
 function loadSWF() {
-	var flashvars = {'onloadcallback': '_appswfLoaded'};
-	var params = {};
-	swfobject.embedSWF("app.swf", "appswf", "30", "30", [9, 0, 0], "expressInstall.swf", flashvars, params); // no attributes
+	flashObject = new goog.ui.media.FlashObject('app.swf');
+	flashObject.setBackgroundColor("#ffffff");
+	flashObject.setSize(30, 30);
+	flashObject.setFlashVar('onloadcallback', '_appswfLoaded');
+	flashObject.render(goog.dom.getElement("appswf"));
 }
 
 
 function _appswfLoaded() {
 	// setTimeout to get out from under the Flash->JS stack frame.
 	goog.global['window'].setTimeout(function() {
-		connectWithFlash(document.getElementById('appswf'));
+		connectWithFlash(document.getElementById(flashObject.getId()));
 	}, 0);
 }
 
