JS Minerva Flash: fix many serious bugs; add RealFlashSocketTests
 * TestClient: add RealFlashSocketTests, similar to RealHttpTests but
   using a Flash transport.

 * client.js: ClientTransport: Set the FlashSocketConduit to underlying_,
   not the FlashSocket.  This was a serious bug found by
   RealFlashSocketTests.

 * FlashConnector.hx: Return string statuses and errors instead of
   just true/false.

 * FlashConnector.hx: Be resilient against any sort of event-firing
   pattern that Flash's Socket might have.

 * FlashSocket: Dispose ourselves if FlashConnector no longer knows
   about the FlashSocket.

 * FlashSocketTracker: If we get an event for a FlashSocket instance
   we don't know about, log a message instead of throwing an Error.

Minor changes:

 * Add more log messages in several places.

 * FlashConnector.hx: fix indentation (spaces -> tabs); reduce line
   lengths.

 * minerva/flashtest/flashtest.html: make Flash applet more visible

--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -116,8 +116,8 @@ var flashObject = null;
 
 function loadSWF() {
 	flashObject = new goog.ui.media.FlashObject('/compiled_client/FlashConnector.swf');
-	flashObject.setBackgroundColor("#ffffff");
-	flashObject.setSize(30, 30);
+	flashObject.setBackgroundColor("#777777");
+	flashObject.setSize(300, 30);
 	flashObject.setFlashVar('onloadcallback', '_appswfLoaded');
 	flashObject.render(goog.dom.getElement("appswf"));
 }
