minerva/index.html: add /chatapp/?mode=http

--- a/minerva/index.html
+++ b/minerva/index.html
@@ -17,6 +17,7 @@
 	</ul>
 <li><a href="/form_sandbox/">/form_sandbox/</a>
 <li><a href="/chatapp/">/chatapp/</a>
+<li><a href="/chatapp/?mode=http">/chatapp/?mode=http</a>
 <li><a href="/flashtest/">/flashtest/</a>
 <li><a href="/flashtest/?mode=http">/flashtest/?mode=http</a>
 </ul>
