JS Minerva: Separate `primaryUrl` and `secondUrl` in Endpoint

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -178,7 +178,7 @@ chatapp.getEndpoint = function() {
 	var queryData = url.getQueryData();
 	var mode = queryData.get('mode');
 	if(mode == 'http') {
-		var endpoint = new cw.net.Endpoint(cw.net.EndpointType.HTTP, '/httpface/', null, null, null);
+		var endpoint = new cw.net.Endpoint(cw.net.EndpointType.HTTP, '/httpface/', '/httpface/', null, null, null);
 		return goog.async.Deferred.succeed(endpoint);
 	} else {
 		var host = url.getDomain();
@@ -186,7 +186,7 @@ chatapp.getEndpoint = function() {
 		var d = chatapp.loadFlashConnector_();
 		d.addCallback(function(bridge) {
 			var tracker = new cw.net.FlashSocketTracker(chatapp.callQueue, bridge);
-			var endpoint = new cw.net.Endpoint(cw.net.EndpointType.TCP, null, host, port, tracker);
+			var endpoint = new cw.net.Endpoint(cw.net.EndpointType.TCP, null, null, host, port, tracker);
 			return endpoint;
 		});
 		return d;
