Weave `domain` setting through chatapp; improve XDRFrame error handling

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -12,6 +12,7 @@
 	</style>
 	<script>
 		window.CSRF_TOKEN = {{ dumps(token) }};
+		document.domain = {{ dumps(domain) }};
 	</script>
 </head>
 <body>
