--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -133,7 +133,9 @@ chatapp.ChatProtocol.prototype.streamStarted = function(stream) {
 };
 
 chatapp.ChatProtocol.prototype.streamReset = function(reasonString, applicationLevel) {
-	chatapp.logger.info('streamReset: ' + reasonString + ', ' + applicationLevel);
+	chatapp.logger.info(
+		'streamReset: reasonString=' + cw.repr.repr(reasonString) +
+		', applicationLevel=' + applicationLevel);
 };
 
 chatapp.ChatProtocol.prototype.handleString_ = function(s) {
