JS Minerva: Add primaryWindow and secondaryWindow to to HttpEndpoint (which will soon be used to make XHR requests to different subdomains); require absolute URLs in HttpEndpoint.

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -212,7 +212,9 @@ chatapp.getEndpoint = function() {
 	var queryData = url.getQueryData();
 	var mode = queryData.get('mode');
 	if(mode == 'http') {
-		var endpoint = new cw.net.HttpEndpoint('/httpface/', '/httpface/');
+		var pageUrl = new goog.Uri(window.location.href);
+		var endpointUrl = pageUrl.resolve(new goog.Uri('/httpface/')).toString();
+		var endpoint = new cw.net.HttpEndpoint(endpointUrl, null, endpointUrl, null);
 		return goog.async.Deferred.succeed(endpoint);
 	} else {
 		var host = url.getDomain();
