JS Minerva: HttpEndpoint: make sure primaryWindow/secondaryWindow can actually make requests to the corresponding URL, by doing a same-origin check.  Require users to pass in two non-null windows to HttpEndpoint.
Originally, I wanted to pass `null` if the window is the current
window, but that would make the design slightly messier.

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -214,7 +214,7 @@ chatapp.getEndpoint = function() {
 	if(mode == 'http') {
 		var pageUrl = new goog.Uri(window.location.href);
 		var endpointUrl = pageUrl.resolve(new goog.Uri('/httpface/')).toString();
-		var endpoint = new cw.net.HttpEndpoint(endpointUrl, null, endpointUrl, null);
+		var endpoint = new cw.net.HttpEndpoint(endpointUrl, goog.global, endpointUrl, goog.global);
 		return goog.async.Deferred.succeed(endpoint);
 	} else {
 		var host = url.getDomain();
